infra/k8s/overlays/prod/namespace.yaml
# Prod Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: igolo-prod
  labels:
    environment: production
    app: igolo
